fix: change /singleplayer/{id}/rounds to /singleplayer/{id}/guesses for consistency
