# api/openapi/bundled.yaml
@@ -885,11 +885,11 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-  /v1/singleplayer/{id}/rounds:
+  /v1/singleplayer/{id}/guesses:
     get:
-      operationId: getSingleplayerGameRounds
-      summary: Get singleplayer game rounds
-      description: Get singleplayer game rounds.
+      operationId: getSingleplayerGameGuesses
+      summary: Get singleplayer game guesses
+      description: Get a list of all guesses made during a singleplayer game.
       tags:
         - singleplayer
       x-ogen-operation-group: Singleplayer
@@ -903,7 +903,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/SingleplayerRoundsWithGuess'
+                  $ref: '#/components/schemas/SingleplayerGuess'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -1367,7 +1367,7 @@ components:
       required:
         - score
         - distance
-    SingleplayerRoundsWithGuess:
+    SingleplayerGuess:
       type: object
       properties:
         roundNum:
